Smaller alignment fixes

--- a/alpha/assets/css/main.css
+++ b/alpha/assets/css/main.css
@@ -3800,9 +3800,10 @@
 
 .videoWrapper {
 	position: relative;
-	padding-bottom: 53.1%; /* 16:9 */
+	padding-bottom: 41.9%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
+    margin: 0 10% 20px 10%;
 }
 .videoWrapper iframe {
 	position: absolute;
